# API-workshop

./: main.py  pyproject.toml  requirements.txt  tests.py
app/: data.py  main.py  schema.py
tests/: test_api.py
